--- a/views/home.pug
+++ b/views/home.pug
@@ -41,15 +41,15 @@ block content
         .col 
             if Image3 != null
                 p= Image3.date 
-                img(src=Image3.value, alt="", class="img-fluid rounded")
+                img(src=Image3.value, alt="", class="img-fluid rounded", style="margin:10px;")
         .col 
             if Image2 != null 
                 p= Image2.date
-                img(src=Image2.value, alt="", class="img-fluid rounded")
+                img(src=Image2.value, alt="", class="img-fluid rounded", style="margin:10px;")
         .col 
             if Image1 != null
                 p= Image1.date 
-                img(src=Image1.value, alt="", class="img-fluid rounded")
+                img(src=Image1.value, alt="", class="img-fluid rounded", style="margin:10px;")
     hr
     .row 
         .col-xl     
