--- a/views/audio.pug
+++ b/views/audio.pug
@@ -1,3 +1,9 @@
 extends header.pug 
 block content
     h5 Audio History
+    table.table 
+        for audioRow in Audio 
+            tr 
+                td= audioRow.date 
+                td
+                    audio(controls, src=audioRow.value, type="audio/wav")
