--- a/views/header.pug
+++ b/views/header.pug
@@ -9,6 +9,9 @@ html
     title XIAO Environmental Monitor
     link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css', rel='stylesheet', integrity='sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH', crossorigin='anonymous')
     script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js', integrity='sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz', crossorigin='anonymous')
+    script(src="https://code.jquery.com/jquery-3.7.1.min.js"
+			  integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+			  crossorigin="anonymous")
   body
     nav.navbar.navbar-expand-lg.navbar-light.bg-light
       a.navbar-brand(href='#') XIAO Environmental Monitor
@@ -18,13 +21,13 @@ html
         ul.navbar-nav.mr-auto
           li.nav-item.active
             a.nav-link(href='home')
-              | Home 
+              | Overview 
           li.nav-item
-            a.nav-link(href='images') Images
+            a.nav-link(href='images') All Images
           li.nav-item
-            a.nav-link(href='audio') Audio
+            a.nav-link(href='audio') All Audio
           li.nav-item
-            a.nav-link(href='air_monitor') Air Monitor
+            a.nav-link(href='air_monitor') All Air Data
           li.nav-item
             a.nav-link(href='about') About
     block content
