--- a/views/header.pug
+++ b/views/header.pug
@@ -13,23 +13,24 @@ html
 			  integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
 			  crossorigin="anonymous")
   body
-    nav.navbar.navbar-expand-lg.navbar-light.bg-light
-      a.navbar-brand(href='#') XIAO Environmental Monitor
-      button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarSupportedContent', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
-        span.navbar-toggler-icon
-      #navbarSupportedContent.collapse.navbar-collapse
-        ul.navbar-nav.mr-auto
-          li.nav-item.active
-            a.nav-link(href='home')
-              | Overview 
-          li.nav-item
-            a.nav-link(href='images') All Images
-          li.nav-item
-            a.nav-link(href='audio') All Audio
-          li.nav-item
-            a.nav-link(href='air_monitor') All Air Data
-          li.nav-item
-            a.nav-link(href='about') About
+    nav.navbar.navbar-expand-lg.bg-body-tertiary
+      .container-fluid
+        a.navbar-brand(href='#') Environmental Monitor
+        button.navbar-toggler(type='button', data-bs-toggle='collapse', data-bs-target='#navbarSupportedContent', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
+          span.navbar-toggler-icon
+        #navbarSupportedContent.collapse.navbar-collapse
+          ul.navbar-nav.me-auto.mb-2.mb-lg-0
+            li.nav-item
+              a.nav-link(href='home') Overview
+            li.nav-item
+              a.nav-link(href='images') All Images
+            li.nav-item
+              a.nav-link(href='audio') All Audio
+            li.nav-item
+              a.nav-link(href='air_monitor') All Air Data
+            li.nav-item
+              a.nav-link(href='about') About
+  
     block content
     
           
